[gd_scene load_steps=61 format=2]

[ext_resource path="res://actor/Tower/TowerActor.gd" type="Script" id=1]
[ext_resource path="res://assets/img/tower/Tower_Animation_008.png" type="Texture" id=2]
[ext_resource path="res://assets/img/circle.png" type="Texture" id=3]
[ext_resource path="res://assets/img/tower/Tower_Animation_011.png" type="Texture" id=4]
[ext_resource path="res://assets/img/tower/Tower_Animation_022.png" type="Texture" id=5]
[ext_resource path="res://assets/img/tower/Tower_Animation_016.png" type="Texture" id=6]
[ext_resource path="res://assets/img/tower/Tower_Animation_012.png" type="Texture" id=7]
[ext_resource path="res://assets/img/tower/Tower_Animation_017.png" type="Texture" id=8]
[ext_resource path="res://assets/img/tower/Tower_Animation_013.png" type="Texture" id=9]
[ext_resource path="res://assets/img/tower/Tower_Animation_023.png" type="Texture" id=10]
[ext_resource path="res://assets/img/tower/Tower_Animation_007.png" type="Texture" id=11]
[ext_resource path="res://assets/img/tower/Tower_Animation_014.png" type="Texture" id=12]
[ext_resource path="res://assets/img/tower/Tower_Animation_018.png" type="Texture" id=13]
[ext_resource path="res://assets/img/tower/Tower_Animation_010.png" type="Texture" id=14]
[ext_resource path="res://assets/img/tower/Tower_Animation_015.png" type="Texture" id=15]
[ext_resource path="res://assets/img/tower/Tower_Animation_019.png" type="Texture" id=16]
[ext_resource path="res://assets/img/tower/Tower_Animation_020.png" type="Texture" id=17]
[ext_resource path="res://assets/img/tower/Tower_Animation_005.png" type="Texture" id=18]
[ext_resource path="res://assets/img/tower/Tower_Animation_006.png" type="Texture" id=19]
[ext_resource path="res://assets/img/tower/Tower_Animation_009.png" type="Texture" id=20]
[ext_resource path="res://assets/img/tower/Tower_Animation_021.png" type="Texture" id=21]
[ext_resource path="res://assets/img/tower/Tower_Animation_004.png" type="Texture" id=22]
[ext_resource path="res://assets/img/tower/Tower_Animation_003.png" type="Texture" id=23]
[ext_resource path="res://assets/img/tower/Tower_Animation_001.png" type="Texture" id=24]
[ext_resource path="res://assets/img/tower/Tower_Animation_002.png" type="Texture" id=25]
[ext_resource path="res://assets/img/tower/Tower_Animation_028.png" type="Texture" id=26]
[ext_resource path="res://assets/img/tower/Tower_Animation_029.png" type="Texture" id=27]
[ext_resource path="res://assets/img/tower/Tower_Animation_026.png" type="Texture" id=28]
[ext_resource path="res://assets/img/tower/Tower_Animation_030.png" type="Texture" id=29]
[ext_resource path="res://assets/img/tower/Tower_Animation_025.png" type="Texture" id=30]
[ext_resource path="res://assets/img/tower/Tower_Animation_027.png" type="Texture" id=31]
[ext_resource path="res://assets/img/tower/Tower_Animation_024.png" type="Texture" id=32]
[ext_resource path="res://assets/img/GUI/Table_03.png" type="Texture" id=33]
[ext_resource path="res://assets/img/GUI/HUD Buy New Drone.png" type="Texture" id=34]
[ext_resource path="res://assets/img/effects/puff.png" type="Texture" id=35]
[ext_resource path="res://assets/img/GUI/HUD Hangar 1+1.png" type="Texture" id=36]
[ext_resource path="res://assets/img/GUI/Shop_Cristal_Icon_01.png" type="Texture" id=37]
[ext_resource path="res://assets/sfx/build.wav" type="AudioStream" id=38]
[ext_resource path="res://assets/font/StrenuousBL15.tres" type="DynamicFont" id=39]
[ext_resource path="res://assets/font/StrenuousBL16.tres" type="DynamicFont" id=40]
[ext_resource path="res://assets/img/effects/white_glowing_circle.png" type="Texture" id=41]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.202643, 0.577093, 1 )
colors = PoolColorArray( 0, 0, 0, 0.509804, 0, 0, 0, 0.509804, 1, 1, 1, 1, 1, 1, 1, 0.298039 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0.647727 ), 0.0, 0.0, 0, 0, Vector2( 0.364, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.684, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.184091 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 5.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 200.0
initial_velocity_random = 0.5
angular_velocity = 100.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 200.0
scale = 0.2
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )

[sub_resource type="CircleShape2D" id=6]
radius = 320.4

[sub_resource type="Animation" id=7]
length = 0.51
step = 0.03
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.51 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "tower_closed"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.03, 0.06, 0.09, 0.12, 0.15, 0.18, 0.21, 0.24, 0.27, 0.3, 0.33, 0.36, 0.39, 0.42, 0.45, 0.48 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 26 ), ExtResource( 28 ), ExtResource( 32 ), ExtResource( 5 ), ExtResource( 17 ), ExtResource( 13 ), ExtResource( 6 ), ExtResource( 12 ), ExtResource( 7 ), ExtResource( 14 ), ExtResource( 20 ), ExtResource( 2 ), ExtResource( 11 ), ExtResource( 19 ), ExtResource( 18 ), ExtResource( 23 ), ExtResource( 24 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 24 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.9
step = 0.03
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03, 0.06, 0.09, 0.12, 0.15, 0.18, 0.21, 0.24, 0.27, 0.3, 0.33, 0.36, 0.39, 0.42, 0.45, 0.48, 0.51, 0.54, 0.57, 0.6, 0.63, 0.66, 0.69, 0.72, 0.75, 0.78, 0.81, 0.84, 0.87 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 24 ), ExtResource( 25 ), ExtResource( 23 ), ExtResource( 22 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 11 ), ExtResource( 2 ), ExtResource( 20 ), ExtResource( 14 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 13 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 21 ), ExtResource( 5 ), ExtResource( 10 ), ExtResource( 32 ), ExtResource( 30 ), ExtResource( 28 ), ExtResource( 31 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 29 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "tower_opened"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("OpeningParticles:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.03, 0.21 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("OpeningParticles")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.03 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "restart"
} ]
}

[sub_resource type="CircleShape2D" id=10]
radius = 32.0

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.698039, 0.258824, 0.258824, 0.247059 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.00784314, 0, 1, 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.0823529, 0.0784314, 0.866667, 0.219608 )

[sub_resource type="Gradient" id=15]
offsets = PoolRealArray( 0, 0.885463, 1 )
colors = PoolColorArray( 0, 0, 0, 0.509804, 1, 1, 1, 0.439216, 1, 1, 1, 0.384314 )

[sub_resource type="GradientTexture" id=16]
gradient = SubResource( 15 )

[sub_resource type="Curve" id=17]
_data = [ Vector2( 0, 0.6625 ), 0.0, 0.0, 0, 0, Vector2( 0.596, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=18]
curve = SubResource( 17 )

[sub_resource type="ParticlesMaterial" id=19]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 100.0
initial_velocity_random = 0.5
angular_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.15
scale_curve = SubResource( 18 )
color_ramp = SubResource( 16 )

[node name="TowerActor" type="Area2D"]
collision_layer = 0
collision_mask = 133
script = ExtResource( 1 )
starting_health = 300

[node name="DropOnGroundParticles" type="Particles2D" parent="."]
emitting = false
amount = 64
lifetime = 0.5
one_shot = true
explosiveness = 1.0
process_material = SubResource( 5 )
texture = ExtResource( 35 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -1.90735e-06, 1.90735e-06 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )

[node name="TowerAreaOfEffect" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )
disabled = true

[node name="AoESprite" type="Sprite" parent="."]
modulate = Color( 0, 0.811765, 1, 0.14902 )
position = Vector2( -2.28882e-05, -1.52588e-05 )
scale = Vector2( 2.84444, 2.77333 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/close = SubResource( 7 )
anims/idle = SubResource( 8 )
anims/open = SubResource( 9 )

[node name="Tween" type="Tween" parent="."]

[node name="BuildingCollision" type="Area2D" parent="." groups=[
"tower_building",
]]
collision_layer = 0

[node name="TowerCollision" type="CollisionShape2D" parent="BuildingCollision"]
shape = SubResource( 10 )

[node name="GUI" type="Node2D" parent="."]

[node name="LifeBar" type="ProgressBar" parent="GUI"]
margin_left = -32.0
margin_top = -48.0
margin_right = 32.0
margin_bottom = -42.0
custom_styles/fg = SubResource( 11 )
custom_styles/bg = SubResource( 12 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SwarmBar" type="ProgressBar" parent="GUI"]
margin_left = -24.0
margin_top = -40.0
margin_right = 24.0
margin_bottom = -34.0
custom_styles/fg = SubResource( 13 )
custom_styles/bg = SubResource( 14 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextSwarmTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="GeneralGUI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="GeneralGUI"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="GeneralGUI/Control"]
position = Vector2( 960, 912 )
scale = Vector2( 1.21615, 0.546784 )
texture = ExtResource( 33 )

[node name="AddSwarmButton" type="Button" parent="GeneralGUI/Control"]
margin_left = 736.0
margin_top = 872.0
margin_right = 912.0
margin_bottom = 937.0
focus_mode = 0
custom_fonts/font = ExtResource( 40 )
custom_colors/font_color_hover = Color( 0.133333, 0.792157, 0.160784, 1 )
custom_colors/font_color_pressed = Color( 0.133333, 0.792157, 0.160784, 1 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Buy drone"
icon = ExtResource( 34 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GeneralGUI/Control/AddSwarmButton"]
margin_left = 15.617
margin_top = 59.9325
margin_right = 55.617
margin_bottom = 78.9325
custom_fonts/font = ExtResource( 39 )
text = "50"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="GeneralGUI/Control/AddSwarmButton"]
position = Vector2( 48.7903, 69.2964 )
scale = Vector2( 0.189185, 0.157489 )
texture = ExtResource( 37 )

[node name="IncreaseMaxSwarmButton" type="Button" parent="GeneralGUI/Control"]
margin_left = 960.0
margin_top = 872.0
margin_right = 1184.0
margin_bottom = 936.0
custom_fonts/font = ExtResource( 40 )
custom_colors/font_color_hover = Color( 0.133333, 0.792157, 0.160784, 1 )
custom_colors/font_color_pressed = Color( 0.133333, 0.792157, 0.160784, 1 )
text = "Inc. Max Swarm"
icon = ExtResource( 36 )
flat = true
clip_text = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GeneralGUI/Control/IncreaseMaxSwarmButton"]
margin_left = 15.2513
margin_top = 60.1736
margin_right = 55.2513
margin_bottom = 79.1736
custom_fonts/font = ExtResource( 39 )
text = "50"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="GeneralGUI/Control/IncreaseMaxSwarmButton"]
position = Vector2( 48.4697, 68.6719 )
scale = Vector2( 0.18, 0.159574 )
texture = ExtResource( 37 )

[node name="OpeningParticles" type="Particles2D" parent="."]
emitting = false
amount = 40
lifetime = 0.5
one_shot = true
explosiveness = 0.8
randomness = 1.0
process_material = SubResource( 19 )
texture = ExtResource( 35 )

[node name="BuildAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 38 )
volume_db = 3.0
max_distance = 1500.0

[node name="Light2D" type="Light2D" parent="."]
visible = false
enabled = false
texture = ExtResource( 41 )
texture_scale = 30.0
energy = 0.3
[connection signal="area_entered" from="." to="." method="_on_TowerActor_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_TowerActor_area_exited"]
[connection signal="area_entered" from="BuildingCollision" to="." method="_on_BuildingCollision_area_entered"]
[connection signal="area_exited" from="BuildingCollision" to="." method="_on_BuildingCollision_area_exited"]
[connection signal="timeout" from="NextSwarmTimer" to="." method="_on_NextSwarmTimer_timeout"]
[connection signal="pressed" from="GeneralGUI/Control/AddSwarmButton" to="." method="_on_AddSwarmButton_pressed"]
[connection signal="pressed" from="GeneralGUI/Control/IncreaseMaxSwarmButton" to="." method="_on_IncreaseMaxSwarmButton_pressed"]
